fix: attach horizontal scroll when snippet code has long lines

--- a/app/containers/snippetPanel/index.scss
+++ b/app/containers/snippetPanel/index.scss
@@ -1,3 +1,7 @@
+.Pane2 {
+  overflow: hidden;
+}
+
 .snippet-panel {
   float: right;
   width: 100%;
